# forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
development-plans/: 01-temporal-determinism.md  02-wait-condition-timeouts.md  03-retry-policies.md  04-workflow-duplication.md  05-run-planned-decomposition.md  06-persist-interaction.md  07-activity-heartbeats.md  08-batch-poll-bug.md  09-model-layer-cleanup.md  10-dead-code-cleanup.md  CHANGELOG.md  PROCESS.md  TASKS.md
docs/: ADDING_A_DOMAIN.md  BATCH_COMPLETION_DOCUMENT_BEST_PRACTICES.md  BATCH_COMPLETION_GUIDE.md  CODEX-REVIEW.md  DECISIONS.md  DESIGN.md  LSP_INTEGRATION_PLAN.md  PHASE1.md  PHASE13.md  PHASE14.md  PHASE15.md  PHASE2.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  TOC.md  completion-documents-batch-best-practices.md  test-strategy.md
sample-flows/: Makefile  README.md
tests/: conftest.py  test_activity_context.py  test_activity_exploration.py  test_activity_git.py  test_activity_llm.py  test_activity_output.py  test_activity_planner.py  test_activity_transition.py  test_activity_validate.py  test_batch_parse.py  test_batch_poll.py  test_batch_poller_workflow.py  test_batch_submit.py  test_capabilities.py  test_cli.py  test_code_intel_budget.py  test_code_intel_graph.py  test_code_intel_init.py  test_code_intel_parser.py  test_code_intel_repo_map.py  test_conflict_resolution.py  test_domains.py  test_e2e.py  test_eval_corpus.py  test_eval_deterministic.py  test_eval_judge.py  test_eval_models.py  test_eval_runner.py  test_exploration_models.py  test_git.py  (+19 more)
(+102 files in other folders)
